--- a/nibble.html
+++ b/nibble.html
@@ -20,7 +20,7 @@
       var dosbox = new Dosbox({
         id: "dosbox",
         onload: function (dosbox) {
-          dosbox.run("NIBBLE.zip", "./NIBBLE.EXE");
+          dosbox.run("archive.zip", "");
         },
         onrun: function (dosbox, app) {
           console.log("App '" + app + "' is runned");
