--- a/nibble.html
+++ b/nibble.html
@@ -20,7 +20,7 @@
       var dosbox = new Dosbox({
         id: "dosbox",
         onload: function (dosbox) {
-          dosbox.run("archive.zip", "./WINDOWS/WIN.COM");
+          dosbox.run("archive.zip", "./");
         },
         onrun: function (dosbox, app) {
           console.log("App '" + app + "' is runned");
